# flatland

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CONTRIBUTING.rst  FAQ.md  FAQ_Repository.md  GETTING_STARTED.md  Makefile  README.md  changelog.md  flatland_2.0.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_rail_env_reset.pkl
.github/workflows/: tests.yml
benchmarks/: benchmark_all_examples.py  profile_all_examples.py  run_all_examples.py
docs/specifications/: railway.md  visualization.md
docs/tutorials/: 01_gettingstarted.rst  02_observationbuilder.rst  03_rail_and_schedule_generator.md  04_stochasticity.md  05_multispeed.md  06_sparse_levels.md
env_data/tests/: Level_distance_map_shortest_path.mpk
examples/: complex_rail_benchmark.py  controller.py  custom_observation_example_01_SimpleObs.py  custom_observation_example_02_SingleAgentNavigationObs.py  custom_observation_example_03_ObservePredictions.py  custom_railmap_example.py  find_path.py  flatland_2_0_example.py  introduction_flatland_2_1.py  keyboard.py  random_policy_example.py
flatland/: __init__.py  cli.py
flatland/action_plan/: action_plan.py  action_plan_player.py
flatland/assets/: __init__.py
flatland/core/: env.py  env_observation_builder.py  env_prediction_builder.py  transition_map.py  transitions.py
flatland/core/grid/: grid4.py  grid4_astar.py  grid8.py  grid_utils.py
flatland/envs/: agent_chains.py  agent_utils.py  distance_map.py  flatland_envs_rail_env_utils.py  grid4_generators_utils.py  malfunction_generators.py  observations.py  persistence.py  predictions.py  rail_env.py  rail_env_shortest_paths.py  rail_env_utils.py  rail_generators.py  rail_trainrun_data_structures.py  schedule_generators.py  schedule_utils.py  sparse_rail_gen.py
flatland/evaluators/: client.py  service.py
flatland/utils/: __init__.py  console.py  controller.py  editor.py  graphics_layer.py  graphics_pil.py  graphics_web.py  jupyter_utils.py  ordered_set.py  rendertools.py  simple_rail.py
getting_started/: getting_started.bat  getting_started.sh
notebooks/: Agent-Close-Following.ipynb  Simple_Rendering_Demo.ipynb  render-episode.ipynb  run_all_notebooks.py
tests/: test_eval_timeout.py  test_flatland_core_grid4_generators_util.py  test_flatland_core_transitions.py  test_flatland_envs_predictions.py  test_flatland_envs_rail_env.py  test_flatland_envs_rail_env_shortest_paths.py  test_flatland_envs_sparse_rail_generator.py  test_flatland_malfunction.py  test_flatland_schedule_from_file.py  test_flatland_utils_rendertools.py  test_global_observation.py  test_malfunction_generators.py  test_random_seeding.py  test_utils.py
tools/: make_icon.py
