[project]
name = "flatland-rl"
description = "Multi Agent Reinforcement Learning on Trains"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dynamic = ["version"]
keywords = ["flatland"]
authors = [{ name = "S.P. Mohanty", email = "mohanty@aicrowd.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
]

# The environment itself, plus rendering. Everything needed to build a RailEnv,
# step it and render it. See the extras below for the evaluation service.
dependencies = [
    "attrs",
    "click",
    "graphviz",
    "ipycanvas",
    "ipython",
    "ipywidgets",
    "matplotlib",
    "msgpack",
    "networkx",
    "numpy",
    "pillow",
    "pyglet",
    "recordtype",
]

[project.optional-dependencies]
# Needed only by flatland.evaluators (the AIcrowd challenge submission service)
# and the `flatland-evaluator` console script.
evaluator = [
    "crowdai-api",
    "msgpack-numpy",
    "pandas",
    "redis",
    "timeout-decorator",
]
# Optional S3 upload support inside flatland.evaluators.aicrowd_helpers.
aws = ["boto3"]

[project.scripts]
flatland-demo = "flatland.cli:demo"
flatland-evaluator = "flatland.cli:evaluator"

[project.urls]
Homepage = "https://gitlab.aicrowd.com/flatland/flatland"

[dependency-groups]
dev = [
    # tests and CI exercise flatland.evaluators, so the dev env installs that extra too
    "flatland-rl[evaluator]",
    "benchmarker",
    "bumpversion",
    "coverage",
    "imageio",
    "jupyter",
    "notebook",
    "pydeps",
    "pytest",
    "pyvirtualdisplay",
    "ruff",
    "twine",
    "watchdog",
    { include-group = "docs" },
]
docs = [
    "docutils",
    "numpydoc",
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flatland/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["flatland"]

[tool.ruff]
extend-exclude = ["docs", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
