[project]
name = "flatland-rl"
description = "Multi Agent Reinforcement Learning on Trains"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dynamic = ["version"]
keywords = ["flatland"]
authors = [{ name = "S.P. Mohanty", email = "mohanty@aicrowd.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
]

# The environment itself, plus rendering. Everything needed to build a RailEnv,
# step it and render it. See the extras below for the evaluation service.
dependencies = [
    "attrs",
    "matplotlib",
    "msgpack",
    "nicegui",
    "numpy",
    "pillow",
    "rich",
    "typer",
]

[project.optional-dependencies]
# Opens the renderer in a native desktop window instead of a browser tab.
# Deliberately optional: a headless training box has no display to open it on,
# and the renderer falls back to printing its URL there.
native = ["pywebview"]
# Needed only by flatland.evaluators (the AIcrowd challenge submission service)
# and the `flatland-evaluator` console script.
evaluator = [
    "crowdai-api",
    "msgpack-numpy",
    "pandas",
    "redis",
    "timeout-decorator",
]
# Needed only by the in-notebook helpers: flatland.utils.jupyter_utils and
# flatland.utils.editor. Not required to build, step or render an env.
# graphviz is here, not in the core deps, because the only thing that ever drew a graph
# was the MotionCheck visualisation in Agent-Close-Following.ipynb, which now owns it.
notebooks = [
    "graphviz",
    "ipycanvas",
    "ipyevents",
    "ipython",
    "ipywidgets",
]
# Optional S3 upload support inside flatland.evaluators.aicrowd_helpers.
aws = ["boto3"]

[project.scripts]
flatland = "flatland.cli:app"

[project.urls]
Homepage = "https://gitlab.aicrowd.com/flatland/flatland"

[dependency-groups]
dev = [
    # tests and CI exercise flatland.evaluators and run the notebooks, so the dev env
    # installs both extras too
    "flatland-rl[evaluator,notebooks]",
    "benchmarker",
    "bumpversion",
    "coverage",
    "imageio",
    "jupyter",
    "notebook",
    "pydeps",
    "pytest",
    "pyvirtualdisplay",
    "ruff",
    "twine",
    "watchdog",
    { include-group = "docs" },
]
docs = [
    "docutils",
    "numpydoc",
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flatland/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["flatland"]

[tool.ruff]
extend-exclude = ["docs", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
