[project]
# "flatland" alone is taken on PyPI by an unrelated project, so the distribution is
# named flatland-spl (ShortestPathLab). The import package is still `flatland`.
name = "flatland-spl"
description = "Multi-agent path finding on trains, in little (or ridiculously large) gridworlds"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dynamic = ["version"]
keywords = ["flatland", "multi-agent path finding", "mapf", "planning"]
authors = [{ name = "ShortestPathLab" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
]

# The environment itself, plus rendering: everything needed to build a RailEnv,
# step it and render it. See the extras below.
dependencies = [
    "attrs",
    "matplotlib",
    "msgpack",
    "nicegui",
    "numpy",
    "pillow",
    "rich",
    "typer",
]

[project.optional-dependencies]
# Opens the renderer in a native desktop window instead of a browser tab.
# Deliberately optional: a headless box has no display to open it on, and the
# renderer falls back to printing its URL there.
native = ["pywebview"]
# Needed only by the in-notebook helpers: flatland.utils.jupyter_utils and
# flatland.utils.editor. Not required to build, step or render an env.
# graphviz is here, not in the core deps, because the only thing that ever drew a graph
# was the MotionCheck visualisation in Agent-Close-Following.ipynb, which now owns it.
notebooks = [
    "graphviz",
    "ipycanvas",
    "ipyevents",
    "ipython",
    "ipywidgets",
]

[project.scripts]
flatland = "flatland.cli:app"

[project.urls]
Homepage = "https://github.com/ShortestPathLab/flatland"
Repository = "https://github.com/ShortestPathLab/flatland"
Issues = "https://github.com/ShortestPathLab/flatland/issues"

[dependency-groups]
dev = [
    # CI runs the notebooks, and `flatland demo` opens a native window by default,
    # so the dev env installs both extras too
    "flatland-spl[native,notebooks]",
    "benchmarker",
    "bumpversion",
    "coverage",
    "imageio",
    "jupyter",
    "notebook",
    "pydeps",
    "pytest",
    "pyvirtualdisplay",
    "ruff",
    "ty",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "flatland/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["flatland"]

[tool.ruff]
extend-exclude = ["docs", "notebooks"]

[tool.ty.src]
include = ["flatland", "examples"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
    "docs",
    "notebooks",
]

[tool.ty.environment]
python-version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
